fixed an issue where in product card view the description overflowed the container if it was too long. Limited to 150 char

--- a/cra-frontend/src/index.css
+++ b/cra-frontend/src/index.css
@@ -278,7 +278,7 @@ section.categories div.container {
 }
 
 .card div {
-  width: 50%;
+  width: 80%;
   height: 100%;
 }
 
